--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -45,7 +45,7 @@ jobs:
     strategy:
       matrix:
         rock: ${{ fromJSON(needs.tag-rocks.outputs.json_result) }}
-    uses: canonical/oci-factory/.github/workflows/Test-Rock.yaml@main
+    uses: canonical/oci-factory/.github/workflows/Test-Rock.yaml@checkout-rock-repo-for-trivyignore
     with:
       oci-archive-name: ${{ matrix.rock.name }}_${{ matrix.rock.tag }}
     secrets:
