--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -48,6 +48,7 @@ jobs:
     uses: canonical/oci-factory/.github/workflows/Test-Rock.yaml@checkout-rock-repo-for-trivyignore
     with:
       oci-archive-name: ${{ matrix.rock.name }}_${{ matrix.rock.tag }}
+      trivyignore-path: .trivyignore
     secrets:
       host-github-token: ${{ secrets.GITHUB_TOKEN }}
 
