chore: adapt slice renaming

--- a/golang-rock/1.24-25.04/rockcraft.yaml
+++ b/golang-rock/1.24-25.04/rockcraft.yaml
@@ -8,6 +8,7 @@ description: |
   simple, efficient and reliable software at scale.
 platforms: 
   amd64:
+  arm64:
 
 # We are not using the _daemon_ run-user, since rockcraft adds this user
 # locked. We however needs sudo to run apt.
@@ -29,9 +30,8 @@ parts:
           golang_cgo-support \
           binutils-${arch}_assembler \
           binutils-${arch}_linker \
-          cpp-14-${arch}_libs \
-          gcc-14-${arch}_gcc-14 \
-          gcc-14-${arch}_libs
+          cpp-14-${arch}_native \
+          gcc-14-${arch}_gcc-14
 
       find ${CRAFT_PART_INSTALL}/usr/share/go-1.24 -depth \( \
               \( -path '*test*' \
