feat: enable arm64

--- a/golang-rock/1.22-24.04/rockcraft.yaml
+++ b/golang-rock/1.22-24.04/rockcraft.yaml
@@ -8,6 +8,7 @@ description: |
   simple, efficient and reliable software at scale.
 platforms: 
   amd64:
+  arm64:
 
 # We are not using the _daemon_ run-user, since rockcraft adds this user
 # locked. We however needs sudo to run apt.
