--- a/.trivyignore
+++ b/.trivyignore
@@ -1,3 +1,7 @@
 # Needs evaluation from security engineering team
 # https://ubuntu.com/security/CVE-2025-22874
 CVE-2025-22874
+
+# Needs evaluation from security engineering team
+# https://ubuntu.com/security/CVE-2025-47907
+CVE-2025-47907
